# pwc_genai_task

./: .dockerignore  .env.example  .gitignore  DOCKERFILE  README.md  app.py  docker-compose.yml  entrypoint.sh  init.py  pyproject.toml
deployment/: tool_chat_template_llama3.1_json.jinja  vllm_run.sh
testing/: performance_test.ipynb  quality_test.ipynb
testing/input/: performance.csv  quality.csv
testing/output/: out_performance.csv  out_quality.csv
utils/: __init__.py  chat_client.py  logger.py
utils/agents/: agentic_workflow.py  prompts.py
utils/agents/tools/: __init__.py  date_caculator.py  rag_retrieval.py
utils/rag/: chunker.py  document_processing_pipeline.py  dropbox_downloader.py  embedder.py  parser.py  vactor_db.py  vector_db.py
